--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Welcome to Nijaz's Homepage!
-description: feel free to bookmark this page for upcoming projects!
+description: Feel free to bookmark this page for upcoming projects!
